Fix List gap

--- a/src/components/MaList/MaList.css
+++ b/src/components/MaList/MaList.css
@@ -29,7 +29,7 @@ ul.check li::before {
   background: url('../../assets/icons/check.svg');
   width: 1rem;
   height: 0.75rem;
-  top: 0.15rem;
+  top: 0.1rem;
   left: -1.5rem;
 }
 
